--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <p class="color__hex">#333333</p>
       <p class="color__rgb">(51, 51, 51)</p>
     </section>
-    
     <section class="btn">
       <button class="btn__generate"><span class="btn__text">Generate</span></button>
     </section>
   </main>
   <script src="script.js" type="text/javascript" charset="utf-8"></script>
+</body>
 
 </html>
